<resources>
    <string name="app_name">Hanafuda</string>
    <string name="card">card</string>
    <string name="a01desc">January: Plain Pine Tree\n\nValue: 1 point\n\nThis card is used in no combos.</string>
    <string name="a05desc">January: Pine Tree &amp; Tanzaku\n\nValue: 5 points\n\nThis card is used in the Seven Tanzaku, Six Tanzaku, and Red Lettered Tanzaku combos.</string>
    <string name="a20desc">January: Pine Tree &amp; Crane\n\nValue: 20 points\n\nThis card is used in the Five Bright, Four Bright, Three Bright, and Crane-Phoenix-Moon combos.</string>
    <string name="b01desc">February: Plain Plum Blossom\n\nValue: 1 point\n\nThis card is used in no combos.</string>
    <string name="b05desc">February: Plum Blossom &amp; Tanzaku\n\nValue: 5 points\n\nThis card is used in the Seven Tanzaku, Six Tanzaku, and Red Lettered Tanzaku combos.</string>
    <string name="b10desc">February: Plum Blossom &amp; Nightingale\n\nValue: 10 points\n\nThis card is used in the Three Bright combo.</string>
    <string name="c01desc">March: Plain Cherry Blossom\n\nValue: 1 point\n\nThis card is used in no combos.</string>
    <string name="c05desc">March: Cherry Blossom &amp; Tanzaku\n\nValue: 5 points\n\nThis card is used in the Seven Tanzaku, Six Tanzaku, and Red Lettered Tanzaku combos.</string>
    <string name="c20desc">March: Cherry Blossom &amp; Curtain\n\nValue: 20 points\n\nThis card is used in the Five Bright, Four Bright, Three Bright, and Views combos.</string>
    <string name="d01desc">April: Plain Wisteria\n\nValue: 1 point\n\nThis card is used in the Straight Wisteria combo.</string>
    <string name="d05desc">April: Wisteria &amp; Tanzaku\n\nValue: 5 points\n\nThis card is used in the Seven Tanzaku, Six Tanzaku, Grass Tanzaku, and Straight Wisteria combos.</string>
    <string name="d10desc">April: Wisteria &amp; Cuckoo\n\nValue: 10 points\n\nThis card is used in the Straight Wisteria combo.</string>
    <string name="e01desc">May: Plain Iris\n\nValue: 1 point\n\nThis card is used in no combos.</string>
    <string name="e05desc">May: Iris &amp; Tanzaku\n\nValue: 5 points\n\nThis card is used in the Seven Tanzaku, Six Tanzaku, and Grass Tanzaku combos.</string>
    <string name="e10desc">May: Iris &amp; Bridge\n\nValue: 10 points\n\nThis card is used in no combos.</string>
    <string name="f01desc">June: Plain Peony\n\nValue: 1 point\n\nThis card is used in no combos.</string>
    <string name="f05desc">June: Peony &amp; Tanzaku\n\nValue: 5 points\n\nThis card is used in the Seven Tanzaku, Six Tanzaku, and Blue Tanzaku combos.</string>
    <string name="f10desc">June: Peony &amp; Butterflies\n\nValue: 10 points\n\nThis card is used in the Boar-Deer-Butterfly combo.</string>
    <string name="g01desc">July: Plain Bush Clover\n\nValue: 1 point\n\nThis card is used in no combos.</string>
    <string name="g05desc">July: Bush Clover &amp; Tanzaku\n\nValue: 5 points\n\nThis card is used in the Seven Tanzaku, Six Tanzaku, and Grass Tanzaku combos.</string>
    <string name="g10desc">July: Bush Clover &amp; Wild Boar\n\nValue: 10 points\n\nThis card is used in the Boar-Deer-Butterfly combo.</string>
    <string name="h01desc">August: Plain Pampas Grass\n\nValue: 1 point\n\nThis card is used in no combos.</string>
    <string name="h10desc">August: Pampas Grass &amp; Wild Geese\n\nValue: 10 points\n\nThis card is used in no combos.</string>
    <string name="h20desc">August: Pampas Grass &amp; Full Moon\n\nValue: 20 points\n\nThis card is used in the Five Bright, Four Bright, Views, and Crane-Phoenix-Moon combos.</string>
    <string name="i01desc">September: Plain Chrysanthemum\n\nValue: 1 point\n\nThis card is used in no combos.</string>
    <string name="i05desc">September: Chrysanthemum &amp; Tanzaku\n\nValue: 5 points\n\nThis card is used in the Seven Tanzaku, Six Tanzaku, and Blue Tanzaku combos.</string>
    <string name="i10desc">September: Chrysanthemum &amp; Cup\n\nValue: 10 points\n\nThis card is used in the Views combo.</string>
    <string name="j01desc">October: Plain Maple Leaves\n\n Value: 1 point\n\nThis card is used in no combos.</string>
    <string name="j05desc">October: Maple Leaves &amp; Tanzaku\n\n Value: 5 points\n\nThis card is used in the Seven Tanzaku, Six Tanzaku, and Blue Tanzaku combos.</string>
    <string name="j10desc">October: Maple Leaves &amp; Wild Deer\n\n Value: 10 points\n\nThis card is used in the Boar-Deer-Butterfly combo.</string>
    <string name="k01desc">November: Rain &amp; Lightning\n\nValue: 1 point\n\nThis card is used in the Straight Rain combo.</string>
    <string name="k05desc">November: Rain &amp; Tanzaku\n\nValue: 5 points\n\nThis card is used in the Straight Rain combo.</string>
    <string name="k10desc">November: Rain &amp; Swallow\n\nValue: 10 points\n\nThis card is used in the Straight Rain combo.</string>
    <string name="k20desc">November: Rain &amp; Poet\n\nValue: 20 points\n\nThis card is used in the Five Bright and Straight Rain combos.</string>
    <string name="l01desc">December: Plain Paulownia\n\nValue: 1 point\n\nThis card is used in the Straight Paulownia combo.</string>
    <string name="l20desc">December: Paulownia &amp; Phoenix\n\nValue: 20 points\n\nThis card is used in the Five Bright, Four Bright, Crane-Phoenix-Moon, and Straight Paulownia combos.</string>
    <string name="draw">Draw</string>
    <string name="h20">h20</string>
    <string name="l20">l20</string>
    <string name="l01">l01</string>
    <string name="k20">k20</string>
    <string name="k10">k10</string>
    <string name="k05">k05</string>
    <string name="k01">k01</string>
    <string name="j10">j10</string>
    <string name="j05">j05</string>
    <string name="j01">j01</string>
    <string name="i10">i10</string>
    <string name="i05">i05</string>
    <string name="i01">i01</string>
    <string name="h10">h10</string>
    <string name="g10">g10</string>
    <string name="h01">h01</string>
    <string name="g05">g05</string>
    <string name="g01">g01</string>
    <string name="f10">f10</string>
    <string name="f05">f05</string>
    <string name="f01">f01</string>
    <string name="e10">e10</string>
    <string name="e05">e05</string>
    <string name="e01">e01</string>
    <string name="d10">d10</string>
    <string name="d05">d05</string>
    <string name="d01">d01</string>
    <string name="c20">c20</string>
    <string name="c05">c05</string>
    <string name="c01">c01</string>
    <string name="b05">b05</string>
    <string name="b10">b10</string>
    <string name="a20">a20</string>
    <string name="b01">b01</string>
    <string name="a05">a05</string>
    <string name="a01">a01</string>
    <string name="_0">0</string>
    <string name="back">Back</string>
    <string name="turnback">turnBack</string>
    <string name="next_turn">Next Turn</string>
    <string name="end_turn">End Turn</string>
    <string name="your_score">Your Score:</string>
    <string name="their_score">Their Score:</string>
    <string name="five_bright">Five Bright: 100 points. Pine and Crane, Cherry and Curtain, Pampas Grass and Full Moon, Paulownia and Phoenix, and Rain and Poet.</string>
    <string name="four_bright">Four Bright: 60 points. Pine and Crane, Cherry and Curtain, Pampas Grass and Full Moon, and Paulownia and Phoenix.</string>
    <string name="three_bright">Three Bright: 30 points. Pine and Crane, Plum and Nightingale, and Cherry and Curtain.</string>
    <string name="seven_tanzaku">Seven Tanzaku: 40 points. Any seven tanzaku, except for the Rain one.</string>
    <string name="six_tanzaku">Six Tanzaku: 30 points. Any six tanzaku, except for the Rain one.</string>
    <string name="red_lettered_tanzaku">Red Lettered Tanzaku: 40 points. The Pine, Plum, and Cherry tanzaku.</string>
    <string name="blue_tanzaku">Blue Tanzaku: 40 points. The Peony, Chrysanthemum, and Maple tanzaku.</string>
    <string name="grass_tanzaku">Grass Tanzaku: 20 points. The Wisteria, Iris, and Clover tanzaku.</string>
    <string name="the_views">The Views: 20 points for two of them, 40 points for all three. Pampas and Full Moon, Chrysanthemum and Wine Cup, Cherry and Curtain.</string>
    <string name="crane_phoenix_moon">Crane-Phoenix-Moon: 20 points. Pine and Crane, Paulownia and Phoenix, and Pampas Grass and Full Moon.</string>
    <string name="boar_deer_butterfly">Boar-Deer-Butterfly: 20 points. Bush Clover and Boar, Maple Leaves and Deer, and Peony and Butterfly.</string>
    <string name="straight_wisteria">Straight Wisteria: 10 points. All four Wisteria cards.</string>
    <string name="straight_paulownia">Straight Paulownia: 10 points. All four Paulownia cards.</string>
    <string name="straight_rain">Straight Rain: 10 points. All four Rain cards.</string>
    <string name="straight_rain_alt">Straight Rain: Negates everyone\'s combo points, including yours. All four Rain cards.</string>
    <string name="january_and_pine_tree">January: Pine Tree</string>
    <string name="february_and_plum_blossom">February: Plum Blossom</string>
    <string name="march_and_cherry_blossom">March: Cherry Blossom</string>
    <string name="april_and_wisteria">April: Wisteria</string>
    <string name="may_and_iris">May: Iris</string>
    <string name="june_and_peony">June: Peony</string>
    <string name="july_and_bush_clover">July: Bush Clover</string>
    <string name="august_and_pampas_grass">August: Pampas Grass</string>
    <string name="september_and_chrysanthemum">September: Chrysanthemum</string>
    <string name="october_and_maple_leaves">October: Maple Leaves</string>
    <string name="november_and_willow_or_rain">November: Willow or Rain</string>
    <string name="december_and_paulownia">December: Paulownia</string>
    <string name="pinecranedesc">Pine Tree and Crane\n(20 points)</string>
    <string name="pinetanzakudesc">Pine Tree and Tanzaku\n(5 points)</string>
    <string name="plainpinedesc">Plain Pine Tree\n(1 point)</string>
    <string name="plumbirdesc">Plum Blossom and Nightingale\n(10 points)</string>
    <string name="plumtanzakudesc">Plum Blossom and Tanzaku\n(5 points)</string>
    <string name="plainplumdesc">Plain Plum Blossom\n(1 point)</string>
    <string name="cherrycurtaindesc">Cherry Blossom and Curtain\n(20 points)</string>
    <string name="cherrytanzakudesc">Cherry Blossom and Tanzaku\n(5 points)</string>
    <string name="plaincherrydesc">Plain Cherry Blossom\n(1 point)</string>
    <string name="wistbirddesc">Wisteria and Cuckoo\n(10 points)</string>
    <string name="wisttanzakudesc">Wisteria and Tanzaku\n(5 points)</string>
    <string name="plainwistdesc">Plain Wisteria\n(1 point)</string>
    <string name="irisbridgedesc">Iris and Bridge\n(10 points)</string>
    <string name="iristanzakudesc">Iris and Tanzaku\n(5 points)</string>
    <string name="plainirisdesc">Plain Iris\n(1 point)</string>
    <string name="peonybutterfliesdesc">Peony and Butterflies\n(10 points)</string>
    <string name="peonytanzakudesc">Peony and Tanzaku\n(5 points)</string>
    <string name="plainpeonydesc">Plain Peony\n(1 point)</string>
    <string name="cloverboardesc">Bush Clover and Wild Boar\n(10 points)</string>
    <string name="clovertanzakudesc">Bush Clover and Tanzaku\n(5 points)</string>
    <string name="plaincloverdesc">Plain Bush Clover\n(1 point)</string>
    <string name="pampasmoondesc">Pampas Grass and Full Moon\n(20 points)</string>
    <string name="pampasgeesedesc">Pampas Grass and Geese\n(10 points)</string>
    <string name="plainpampasdesc">Plain Pampas Grass\n(1 point)</string>
    <string name="card_gallery">Card Gallery</string>
    <string name="loading">Loading</string>
    <string name="tutorial">Tutorial</string>
    <string name="start">Start</string>
    <string name="filler">filler</string>
    <string name="main_menu">Main Menu</string>
    <string name="play_again">Play Again</string>
    <string name="final_scores">Final Scores</string>
    <string name="winner">Wins!</string>
</resources>